[project]
name = "isvalidaddress"
version = "0.0.0"
description = "Guardrails AI IsValidAddress validator"
authors = [
    {name = "Guardrails AI", email = "contact@guardrailsai.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "guardrails-ai>=0.3.2",
    "pydantic>=2.4.2",
    "googlemaps"
]